<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="button">valider</string>
    <string name="editText">You can write whatever you like, thats magic right ?</string>

    <string name="check1">Hey</string>
	<string name="check2">What???</string>
	<string name="check3">Fuck !</string>

	<string name="rad1">merde</string>
	<string name="rad2">non</string>
	<string name="rad3">si !</string>
</resources>
