<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="25.7dp"
        android:text="@string/hello_world"
        android:textColor="#FF0000"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/editeur"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/editText"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/button" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editeur"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp"
        android:checked="true"
        android:text="@string/check1" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_alignParentRight="true"
        android:text="@string/check3" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:text="@string/check2" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="100dp" >
	    <RadioButton
	        android:id="@+id/radioButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="0dp"
			android:checked="true"
 	        android:text="@string/rad1" />
	
	    <RadioButton
	        android:id="@+id/radioButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/rad2" />

	    <RadioButton
	        android:id="@+id/radioButton3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/rad3" />

	</RadioGroup>

</RelativeLayout>